Requested fixed done
About gallery section were lisseth's headed is cropped was fixed.

--- a/SCSS/_about.scss
+++ b/SCSS/_about.scss
@@ -42,8 +42,10 @@
 
     @media screen and(max-width: 400px) {
       width: 100%;
+      margin-bottom: 10px;
     }
-
+    
+ 
     .about-content__info {
       width: 90%;
       
